Experiment with parallax and get API data onto page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,102 @@
 <html>
     <head>
         <title>Starter Project</title>
-        <link rel="stylesheet" href="./dest/styles.main.min.css"/>
+        <link rel="icon"
+              type="image/png"
+              href="https://s-media-cache-ak0.pinimg.com/originals/a9/e0/19/a9e01984a9cdadd57b0fd3e0985fb2fc.png">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+        <script src="https://use.fontawesome.com/3c2bdfb862.js"></script>
+        <link rel="stylesheet" href="./dest/styles/main.min.css"/>
     </head>
     <body>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="mountain">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 1</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="lake">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 2</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="forest">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 3</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="scotland">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 4</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="mountain">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 5</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="mountain">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 5</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="mountain">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 5</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="mountain">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 5</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="mountain">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 5</p>
+                </div>
+            </div>
+            <div class="parallax-container">
+                <div class="parallax-background">
+                  <img src="#" alt="mountain">
+                </div>
+                <div class="parallax-foreground">
+                  <p class="parallax-foreground__caption">Foreground Text 5</p>
+                </div>
+            </div>
 
-    <script src="./dest/scripts/main.min.js"></script>
+            <h3>Ajax Call</h3>
+
+            <script
+              src="https://code.jquery.com/jquery-3.2.1.min.js"
+              integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+              crossorigin="anonymous"></script>
+              <script src="./dest/scripts/main.min.js"></script>
+        </body>
     </body>
 </html>
