Style app and refine javascript

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Starter Project</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon"
               type="image/png"
               href="https://s-media-cache-ak0.pinimg.com/originals/a9/e0/19/a9e01984a9cdadd57b0fd3e0985fb2fc.png">
@@ -10,89 +11,23 @@
         <link rel="stylesheet" href="./dest/styles/main.min.css"/>
     </head>
     <body>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="mountain">
+            <div class="site-container">
+              <header class="header">
+                <div class="header__title-container">
+                  <img src="./dest/images/zype-logo.png" alt="" class="header__logo">
+                  <h3 class="header__title">Browse Our Video Library</h3>
                 </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 1</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="lake">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 2</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="forest">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 3</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="scotland">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 4</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="mountain">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 5</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="mountain">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 5</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="mountain">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 5</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="mountain">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 5</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="mountain">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 5</p>
-                </div>
-            </div>
-            <div class="parallax-container">
-                <div class="parallax-background">
-                  <img src="#" alt="mountain">
-                </div>
-                <div class="parallax-foreground">
-                  <p class="parallax-foreground__caption">Foreground Text 5</p>
-                </div>
-            </div>
+              </header>
 
-            <h3>Ajax Call</h3>
-
+              <main class="main-content">
+                <ul class="main-content__video-list">
+                  <!-- generated via javascript -->
+                  <div class="loading-placeholder">
+                    <img src="./dest/images/Dual Ring.svg" alt="placeholder+image">
+                  </div>
+                </ul>
+              </main>
+            </div>
             <script
               src="https://code.jquery.com/jquery-3.2.1.min.js"
               integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
