Add scroll to top button and refine styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </head>
     <body>
             <div class="site-container">
+            <div class="top-button">
+              <img src="./dest/images/up-arrow.svg">
+            </div>
               <header class="header">
                 <div class="header__title-container">
                   <img src="./dest/images/zype-logo.png" alt="" class="header__logo">
@@ -26,6 +29,7 @@
                     <img src="./dest/images/Dual Ring.svg" alt="placeholder+image">
                   </div>
                 </ul>
+                <button class="load-more-button">Load More Videos...</button>
               </main>
             </div>
             <script
