Clean up code comments and extra spaces

--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
         <link rel="stylesheet" href="./dest/styles/main.min.css"/>
     </head>
     <body>
-            <div class="site-container">
-            <div class="top-button">
-              <img src="./dest/images/up-arrow.svg">
-            </div>
-              <header class="header">
-                <div class="header__title-container">
-                  <img src="./dest/images/zype-logo.png" alt="" class="header__logo">
-                  <h3 class="header__title">Browse Our Video Library</h3>
-                </div>
-              </header>
+        <div class="site-container">
 
-              <main class="main-content">
-                <ul class="main-content__video-list">
-                  <!-- generated via javascript -->
-                  <div class="loading-placeholder">
-                    <img src="./dest/images/Dual Ring.svg" alt="placeholder+image">
-                  </div>
-                </ul>
-                <button class="load-more-button">Load More Videos...</button>
-              </main>
+          <div class="top-button">
+            <img src="./dest/images/up-arrow.svg">
+          </div>
+
+          <header class="header">
+            <div class="header__title-container">
+              <img src="./dest/images/zype-logo.png" alt="" class="header__logo">
+              <h3 class="header__title">Browse Our Video Library</h3>
             </div>
-            <script
-              src="https://code.jquery.com/jquery-3.2.1.min.js"
-              integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-              crossorigin="anonymous"></script>
-              <script src="./dest/scripts/main.min.js"></script>
+          </header>
+
+          <main class="main-content">
+            <ul class="main-content__video-list">
+              <!-- list items generated via javascript -->
+              <div class="loading-placeholder">
+                <img src="./dest/images/Dual Ring.svg" alt="placeholder+image">
+              </div>
+            </ul>
+            <button class="load-more-button">Load More Videos...</button>
+          </main>
+
+        </div>
+        <script
+          src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous"></script>
+          <script src="./dest/scripts/main.min.js"></script>
         </body>
     </body>
 </html>
