Add loading error message to AJAX call and refine padding styles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Starter Project</title>
+        <title>Zype Video Library</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon"
               type="image/png"
@@ -31,7 +31,7 @@
                 <img src="./dest/images/Dual Ring.svg" alt="placeholder+image">
               </div>
             </ul>
-            <button class="load-more-button">Load More Videos...</button>
+            <button class="load-more-button">Load More Videos</button>
           </main>
 
         </div>
